# scraper-etico

./: .gitignore  GITHUB_README.md  LICENSE  MANIFEST.in  README.md  analisar_resultados.py  analyze_results.py  config_producao.example.py  custom_scraping.py  example_usage.py  production_config.example.py  pyproject.toml  rodar_producao.py  run_production.py  scraping_personalizado.py  setup.py
notebooks/: ethical_scraper_tutorial.ipynb  resultados_scraping_20250904_125829.csv  resultados_scraping_20250904_125829.json  tutorial_scraper_etico.ipynb
src/: __init__.py  analyzer.py  batch_processor.py  scraper_etico.py  utils.py
tests/: __init__.py  analyzer_example.py  production_test.py  run_tests.py  test_analyzer.py  test_batch_processor.py  test_scraper_etico.py
tests/examples/: my_monitoring.py  real_sites_test.py  simple_test.py
tests/testes/: teste_lote.py
